--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:coverage": "jest --coverage --config ./tests/jest-config.js",
     "test:watch": "jest --watch --config ./tests/jest-config.js"
   },
-  "repository": "https://github.com/vzhou842/victorzhou.com",
+  "repository": "https://github.com/gautamtata/blog",
   "author": "Gautam Tata <gautamtata@gmail.com>",
   "license": "MIT",
   "keywords": [],
