--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gatsby-plugin-sass": "^2.1.20",
     "gatsby-plugin-sharp": "^2.2.36",
     "gatsby-plugin-sitemap": "^2.2.19",
+    "gatsby-plugin-use-dark-mode": "^1.1.2",
     "gatsby-remark-autolink-headers": "^2.1.16",
     "gatsby-remark-code-headers": "^1.1.0",
     "gatsby-remark-copy-linked-files": "^2.1.28",
@@ -69,7 +70,8 @@
     "react-headroom": "^3.0.0",
     "react-helmet": "^5.2.1",
     "react-share": "^2.4.0",
-    "request-promise": "^4.2.4"
+    "request-promise": "^4.2.4",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
