adding different typography

--- a/package.json
+++ b/package.json
@@ -25,14 +25,20 @@
   "license": "MIT",
   "keywords": [],
   "dependencies": {
+    "@divyanshu013/media": "^1.0.0",
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "@loadable/component": "^5.12.0",
     "bluebird": "^3.7.1",
     "classnames": "^2.2.6",
     "codecov": "^3.6.1",
+    "emotion": "^10.0.27",
+    "emotion-theming": "^10.0.27",
     "express": "^4.17.1",
     "gatsby": "^2.19.32",
     "gatsby-link": "^2.2.22",
     "gatsby-plugin-catch-links": "^2.1.15",
+    "gatsby-plugin-emotion": "^4.2.0",
     "gatsby-plugin-feed": "^2.3.19",
     "gatsby-plugin-flow": "^1.1.12",
     "gatsby-plugin-google-gtag": "^1.1.14",
@@ -69,8 +75,15 @@
     "react-dom": "^16.11.0",
     "react-headroom": "^3.0.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.9.0",
     "react-share": "^2.4.0",
+    "react-typography": "^0.16.19",
     "request-promise": "^4.2.4",
+    "typeface-fira-mono": "0.0.72",
+    "typeface-open-sans": "0.0.75",
+    "typeface-space-mono": "0.0.71",
+    "typeface-zilla-slab": "0.0.72",
+    "typography": "^0.16.19",
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
