--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gatsby-plugin-emotion": "^4.2.0",
     "gatsby-plugin-feed": "^2.3.19",
     "gatsby-plugin-flow": "^1.1.12",
+    "gatsby-plugin-google-analytics": "^2.2.2",
     "gatsby-plugin-google-gtag": "^1.1.14",
     "gatsby-plugin-manifest": "^2.2.26",
     "gatsby-plugin-offline": "^3.0.31",
